--- a/cld/livros/templates/livros/base.html
+++ b/cld/livros/templates/livros/base.html
@@ -8,10 +8,10 @@
 </head>
 <body>
         <div>
+        	<h1><a href="/livros">Lista de Livros</a></h1>
         	{% if user.is_authenticated %}
             <a href="{% url 'livro_new' %}" class="top-menu">[ + Novo ]</a>
             {% endif %}
-		    <h1><a href="/">Lista de Livros</a></h1>
 		</div>
 		{% block content %}
         {% endblock %}		
