--- a/cld/livros/templates/livros/livro_detail.html
+++ b/cld/livros/templates/livros/livro_detail.html
@@ -2,9 +2,12 @@
 
 {% block content %}
 
+</script>
+
     <div>
     	{% if user.is_authenticated %}
     	<a class="btn btn-default" href="{% url 'livro_edit' pk=livro.pk %}">[Editar]</a>
+    	<a class="btn btn-default" href="{% url 'livro_delete' pk=livro.pk %}">[Apagar]</a>
 		{% endif %}
 
         <h2>{{ livro.titulo }}</h2>
